--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/blazeface"></script>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +22,11 @@
 		var image = document.getElementById('output');
 		image.src = URL.createObjectURL(event.target.files[0]);
 	};
+
+	const setupPage = async() => {
+		text_model = await tf.loadLayersModel('./model/text_model/model.json');
+		image_model = await tf.loadLayersModel('./model/image_model/model.json')
+	}
 	</script>
 </body>
 </html>
