--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"></script>
+	<script src='https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js'></script>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,10 +31,46 @@
 	const predict = async () => {
 		var image = document.getElementById('output');
 		imagePrediction = predictImage(image);
-		imagePrediction.then((value) =>
-			{ console.log(value); }
+		textPrediction = extractText(image)
+							.then((text) =>
+							{
+								console.log(text.length);
+								return predictText(text); 
+							});
+		let image_conf = 0;
+		let text_conf = 0;
+		await imagePrediction.then((value) =>
+			{ 
+				image_conf = value;
+				console.log("Image confidence = ", value);
+			}
 		);
-		// textPredicition = predictText("I'm Dhilip and my phone number is 12334132543");
+		await textPrediction.then((value) =>
+			{ 
+				text_conf = value;
+				console.log("Text confidence = ", value);
+			}
+		);
+
+		if(image_conf > 0.5 || text_conf > 0.5){
+			console.log("Sensitive");
+		}
+		else{
+			console.log("Non-sensitive");
+		}
+	}
+
+	const extractText = async function(image){
+		let text = await Tesseract.recognize(
+					image.src,
+					'eng',
+					{ logger: m => console.log("Extracting: ", m.progress) }
+					).then(({ data: { text } }) => {
+						return text;
+					});
+		text = text.replace(/[\r\n]+/g," ");
+		console.log(text);
+		return text;
 	}
 
 	const predictImage = async function(image){
@@ -52,9 +89,28 @@
 	}
 
 	const predictText = async function(text){
-		text_model.predict(text).data().then(
-			predictions => {console.log(predictions);}
-		);
+		const max_length = 60;
+		const tokens = text.split(" ");
+		const word_index = await fetch('./models/text_model/word_index.json')
+					.then(response => {
+					return response.json();
+					});
+		let padded = new Array(max_length).fill(0);
+		for (let i = 0; i < max_length; i++) {
+			let tokenid = word_index[tokens[i].toLowerCase()]
+			padded[i] = (tokenid === undefined)? 1 : tokenid;
+			if(i == tokens.length-1)
+				break;
+		}
+		let tensor = tf.tensor([padded]);
+		
+		const prediction = await text_model
+								.predict(tensor)
+								.data()
+								.then( (value) => 
+								{ return value; }
+								);
+		return prediction;
 	}
 
 	const setupPage = async() => {
