--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -121,7 +121,7 @@
         
         <div class="member">
           <div class="circular-portrait">
-          <img src="https://dhilipsanjay.github.io/assets/img/current_dp.jpeg" alt="Not Found" onerror="this.src='./assets/images/placeholder.jpg'">
+          <img src="./assets/images/profile/Dhilip.jpg" alt="Not Found" onerror="this.src='./assets/images/placeholder.jpg'">
           </div>
           <a href="https://twitter.com/DhilipSanjay" target="_blank">
             <p>Dhilip Sanjay</p>
