--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -77,8 +77,8 @@
     <div id="progressStatus"> 
       <div id="progressBar">1%</div> 
     </div> 
-    <div class="prediction non-sensitive main-title"><i class="fas fa-check-square"></i> Non-Sensitive</div>
-    <div class="prediction sensitive main-title"><i class="fas fa-times-circle"></i> Sensitive</div>
+    <div class="classification non-sensitive main-title"><i class="fas fa-check-square"></i> Non-Sensitive</div>
+    <div class="classification sensitive main-title"><i class="fas fa-times-circle"></i> Sensitive</div>
   </div>
   </div>
 
